name:                doc-svg-gen
version:             0.1.0.0
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable doc-svg-gen
  buildable:           False
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    { base >=4.9 && <4.11
    , text
    , graphviz >=2999.19.0.0
    }
  -- hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: {
  }
  ghc-options: {
    -Wall
    -fprof-auto -fprof-cafs -fno-spec-constr
    -j
    -fno-warn-unused-imports
    -fno-warn-orphans
    -rtsopts
    -with-rtsopts "-M2G"
  }
